tests/bigint/invalid08.js
type InvalidNegDecimalE = -2.0e9n; // error
